--- a/Website/Site.master
+++ b/Website/Site.master
@@ -53,6 +53,8 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/TestPage1">Test 1</a></li>
+                        <li><a runat="server" href="~/TestPage2">Test 2</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
